--- a/docs/changes/13.maintenance.md
+++ b/docs/changes/13.maintenance.md
@@ -1,1 +1,2 @@
-Refactoring code to minimize duplication and improve maintainability.
+- refactoring code to minimize duplication and improve maintainability.
+- unified command line interface for all scripts.
