--- a/docs/changes/13.maintenance.md
+++ b/docs/changes/13.maintenance.md
@@ -1,2 +1,3 @@
 - refactoring code to minimize duplication and improve maintainability.
 - unified command line interface for all scripts.
+- unit tests are disabled for now due to rapid changes in the codebase.
