--- a/docs/changes/18.feature.md
+++ b/docs/changes/18.feature.md
@@ -1,1 +1,1 @@
-Calculation thresholds for signal efficiencies and fill as boolean to classification trees.
+Calculation classification thresholds for signal efficiencies and fill as boolean to classification trees.
