--- a/docs/changes/28.feature.md
+++ b/docs/changes/28.feature.md
@@ -1,2 +1,2 @@
-Apply unified clippling settings to feature variables.
-Add angle pointing pointing direction and geomagnetic field vector as feature.
+Apply unified clipping settings to feature variables.
+Add angle between pointing direction and geomagnetic field vector as feature.
