energy bin weighting

--- a/docs/changes/53.feature.md
+++ b/docs/changes/53.feature.md
@@ -7,3 +7,5 @@ Add a stereo-regression training evaluation script to plot the training and eval
 ```console
 python src/eventdisplay_ml/scripts/plot_training_evaluation.py --model_file tmp_cta_testing/stereo_south/dispdir_bdt.joblib --output_file test_training_curves.png
 ```
+
+- set weights in training for energy bins with less than 10 counts to 10
