--- a/docs/changes/53.feature.md
+++ b/docs/changes/53.feature.md
@@ -1,11 +1,14 @@
-Improvement for learning and testing:
+Fix critical bugs in stereo regression pipeline:
 
-- add evaluation set to stereo regression (direction/energy) training and save it to joblib.
+- **Fixed double log10 application**: E_residual was being computed with log10(ErecS) that had already been log10'd. Now ErecS/Erec remain in linear space during training/apply; log10 applied explicitly when needed.
+- **Fixed energy bin weighting**: Bins with fewer than 10 events now correctly get zero weight instead of being clamped; weight sorting preserves bin order.
+- **Fixed standardization inversion**: Added proper loading and validation of target_mean/target_std scalers in stereo apply pipeline to prevent KeyError crashes.
+- **Fixed ErecS validation**: Safe log10 computation during apply avoids RuntimeWarning for invalid values; all output rows preserved even with invalid energy.
+- **Fixed evaluation metrics**: ErecS in evaluation now properly converted to log10 space for energy resolution comparison.
+- **Fixed FutureWarning**: Series positional indexing converted to numpy arrays for future pandas compatibility.
 
-Add a stereo-regression training evaluation script to plot the training and evaluation metrics over the training iterations:
+New features and improvements:
 
-```console
-python src/eventdisplay_ml/scripts/plot_training_evaluation.py --model_file tmp_cta_testing/stereo_south/dispdir_bdt.joblib --output_file test_training_curves.png
-```
-
-- set weights in training for energy bins with less than 10 counts to 10
+- **Comprehensive test coverage**: Added `test_regression_apply.py` with full unit test suite covering standardization inversion, residual computation, ErecS handling, and final prediction reconstruction.
+- **Improved error messages**: Clear, actionable error messages when standardization parameters are missing or mismatched in apply pipeline.
+- **Data preservation guarantee**: Stereo apply pipeline now preserves all input rows even when encountering invalid energy values, ensuring output count equals input count.
